// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dkzCjb ffvpgZ"
>
  <div
    class="sc-eCYdKt lgtNkv"
  >
    <span
      class="sc-jSMdHm"
    >
      0
    </span>
    <span
      class="sc-gKXNOb drQXvG"
    >
      42
    </span>
  </div>
  <button
    class="sc-bczSft sc-gsnScm ldAfTY jyNNeI"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dkzCjb ffvpgZ"
>
  <div
    class="sc-hKMtDE lnnRzZ"
  >
    🛌🛌
  </div>
  <button
    class="sc-bczSft sc-gsnScm jurrAP jyNNeI"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dkzCjb ffvpgZ"
>
  <div
    class="sc-hKMtDE lnnRzZ"
  >
    🍅
  </div>
  <button
    class="sc-bczSft sc-gsnScm jurrAP jyNNeI"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dkzCjb ffvpgZ"
>
  <div
    class="sc-hKMtDE lnnRzZ"
  >
    🛌
  </div>
  <button
    class="sc-bczSft sc-gsnScm jurrAP jyNNeI"
  >
    Start
  </button>
</div>
`;
